@@ -7,17 +7,15 @@ import org.slf4j.LoggerFactory;
 import javax.mail.*;
 import javax.mail.internet.InternetAddress;
 import javax.mail.internet.MimeMessage;
-import java.io.File;
-import java.io.FileOutputStream;
 import java.io.IOException;
 import java.nio.file.*;
 import java.nio.file.attribute.BasicFileAttributes;
-import java.text.SimpleDateFormat;
+import java.time.LocalDateTime;
+import java.time.format.DateTimeFormatter;
 import java.util.Arrays;
 import java.util.Date;
 import java.util.List;
 import java.util.Properties;
-import java.util.stream.Collectors;
 import java.util.zip.ZipOutputStream;
 
 import static top.szzz666.Main.config;
@@ -54,8 +52,12 @@ public class MyJob implements Job {
 //                            String cloud_file_path = target + "/" + zipFileName;
                             BaiduPanManager.uploadLargeFile(getAccessToken(), temp_file_path, "/apps/" + config.getString("cloud.baidu.appName") + target + "/" + zipFileName);
                             BaiduPanManager.manageBackups(getAccessToken(), "/apps/" + config.getString("cloud.baidu.appName") + target, number);
-                            File fileToDelete = new File(temp_file_path);
-                            fileToDelete.delete();
+                            Path tempFile = Path.of(temp_file_path);
+                            try {
+                                Files.deleteIfExists(tempFile);
+                            } catch (IOException ex) {
+                                logger.warn("删除临时文件失败: {}", temp_file_path, ex);
+                            }
                             break;
                         }
                     }
@@ -70,8 +72,12 @@ public class MyJob implements Job {
                             String cloud_file_path = target + "/" + zipFileName;
                             Pan123Manager.uploadLargeFile(temp_file_path, cloud_file_path);
                             Pan123Manager.manageBackups(number);
-                            File fileToDelete = new File(temp_file_path);
-                            fileToDelete.delete();
+                            Path tempFile2 = Path.of(temp_file_path);
+                            try {
+                                Files.deleteIfExists(tempFile2);
+                            } catch (IOException ex) {
+                                logger.warn("删除临时文件失败: {}", temp_file_path, ex);
+                            }
                             break;
                         }
                     }
@@ -83,52 +89,24 @@ public class MyJob implements Job {
                 sendEmail(config.getString("notify.mail.host"), config.getInt("notify.mail.port"), config.getString("notify.mail.senderUsername"), config.getString("notify.mail.senderPassword"), config.getString("notify.mail.recipient"), config.getString("notify.mail.subject"), e.getMessage() + "\n" + Arrays.toString(e.getStackTrace()));
         }
 
-
-//        try {
-//            String zipFileName = backupFolderToZip(path, target);
-//            logger.info("备份成功完成: {} -> {}", path, target);
-//            cleanOldBackups(target, number);
-//            logger.info("清理完成，保留最新的{}个备份文件", number);
-//            if (config.getBoolean("云备份")) {
-//                String localPath = target + "/" + zipFileName;
-//                String remotePath = cloud + "/" + zipFileName;
-//                if (config.getBoolean("百度网盘"))
-//                    BaiduPanManager.uploadLargeFile(getAccessToken(), localPath,
-//                            "/apps/" + config.getString("百度应用名称") + remotePath);
-//                if (config.getBoolean("123云盘"))
-//                    Pan123Manager.uploadLargeFile(localPath, remotePath);
-//                logger.info("云备份成功完成: {} -> {}", localPath, remotePath);
-//                if (config.getBoolean("百度网盘"))
-//                    BaiduPanManager.manageBackups(getAccessToken(), "/apps/" + config.getString("百度应用名称") + cloud, number);
-//                if (config.getBoolean("123云盘"))
-//                    Pan123Manager.manageBackups(number);
-//                logger.info("云备份清理完成，保留最新的{}个备份文件", number);
-//            }
-//        } catch (Exception e) {
-//            logger.error("备份或清理过程中出错", e);
-//            if (config.getBoolean("备份失败通知"))
-//                sendEmail(config.get("邮件服务器host"), config.get("邮件服务器port"), config.get("发送者username"),
-//                        config.get("发送者password"), config.get("邮件接收人"), config.get("邮件标题"),
-//                        e.getMessage() + "\n" + Arrays.toString(e.getStackTrace()));
-//        }
     }
 
     public static String backupFolderToZip(String sourceFolderPath, String targetFolderPath) throws IOException {
-        File sourceFolder = new File(sourceFolderPath);
-        if (!sourceFolder.exists() || !sourceFolder.isDirectory()) {
+        Path sourcePath = Path.of(sourceFolderPath);
+        if (!Files.exists(sourcePath) || !Files.isDirectory(sourcePath)) {
             throw new IOException("源路径不是一个有效的文件夹: " + sourceFolderPath);
         }
-        File targetFolder = new File(targetFolderPath);
-        if (!targetFolder.exists()) {
-            targetFolder.mkdirs();
+        Path targetPath = Path.of(targetFolderPath);
+        if (!Files.exists(targetPath)) {
+            Files.createDirectories(targetPath);
         }
         // 使用源文件夹名作为ZIP文件名
-        String zipFileName = sourceFolder.getName() + "_AutoBackup_" + getTimeStr() + ".zip";
-        File zipFile = new File(targetFolder, zipFileName);
-        try (FileOutputStream fos = new FileOutputStream(zipFile); ZipOutputStream zos = new ZipOutputStream(fos)) {
-            zipFolder(sourceFolder, sourceFolder, zos);
+        String zipFileName = sourcePath.getFileName() + "_AutoBackup_" + getTimeStr() + ".zip";
+        Path zipFilePath = targetPath.resolve(zipFileName);
+        try (ZipOutputStream zos = new ZipOutputStream(Files.newOutputStream(zipFilePath))) {
+            zipFolder(sourcePath.toFile(), sourcePath.toFile(), zos);
         } catch (IOException e) {
-            deleteFolder(zipFile.getAbsolutePath());
+            deleteFolder(zipFilePath.toAbsolutePath().toString());
             logger.info("文件夹 {} 已被其他程序占用，复制到临时文件夹再进行备份。", sourceFolderPath);
             String copyPath = copyFolder(sourceFolderPath, targetFolderPath);
             zipFileName = backupFolderToZip(copyPath, targetFolderPath);
@@ -140,17 +118,27 @@ public class MyJob implements Job {
 
 
     private static void cleanOldBackups(String backupFolderPath, int keepCount) throws IOException {
-        Path folder = Paths.get(backupFolderPath);
-        // 获取文件夹中所有ZIP备份文件并按创建时间排序（从新到旧）
-        List<File> backupFiles = Arrays.stream(folder.toFile().listFiles()).filter(file -> file.isFile() && file.getName().endsWith(".zip")).sorted((f1, f2) -> {
-            try {
-                BasicFileAttributes attr1 = Files.readAttributes(f1.toPath(), BasicFileAttributes.class);
-                BasicFileAttributes attr2 = Files.readAttributes(f2.toPath(), BasicFileAttributes.class);
-                return attr2.creationTime().compareTo(attr1.creationTime());
-            } catch (IOException e) {
-                return 0;
-            }
-        }).collect(Collectors.toList());
+        Path folder = Path.of(backupFolderPath);
+        if (!Files.isDirectory(folder)) {
+            logger.warn("备份文件夹不存在或不是目录: {}", backupFolderPath);
+            return;
+        }
+        // 使用 Files.list 获取文件夹中所有ZIP备份文件并按创建时间排序（从新到旧）
+        List<Path> backupFiles;
+        try (var stream = Files.list(folder)) {
+            backupFiles = stream
+                    .filter(file -> Files.isRegularFile(file) && file.getFileName().toString().endsWith(".zip"))
+                    .sorted((f1, f2) -> {
+                        try {
+                            BasicFileAttributes attr1 = Files.readAttributes(f1, BasicFileAttributes.class);
+                            BasicFileAttributes attr2 = Files.readAttributes(f2, BasicFileAttributes.class);
+                            return attr2.creationTime().compareTo(attr1.creationTime());
+                        } catch (IOException e) {
+                            return 0;
+                        }
+                    })
+                    .toList();
+        }
 
         if (backupFiles.size() <= keepCount) {
             logger.debug("备份文件数量不足{}个，无需清理", keepCount);
@@ -159,20 +147,21 @@ public class MyJob implements Job {
 
         // 保留最新的keepCount个文件，删除其余文件
         for (int i = keepCount; i < backupFiles.size(); i++) {
-            File fileToDelete = backupFiles.get(i);
-            logger.debug("正在删除老旧备份文件: {}", fileToDelete.getName());
-            if (!fileToDelete.delete()) {
-                logger.warn("无法删除文件: {}", fileToDelete.getName());
+            Path fileToDelete = backupFiles.get(i);
+            logger.debug("正在删除老旧备份文件: {}", fileToDelete.getFileName());
+            try {
+                Files.deleteIfExists(fileToDelete);
+            } catch (IOException e) {
+                logger.warn("无法删除文件: {}", fileToDelete.getFileName(), e);
             }
         }
     }
 
 
+    private static final DateTimeFormatter DATE_TIME_FORMATTER = DateTimeFormatter.ofPattern("yyyyMMddHHmmss");
+
     private static String getTimeStr() {
-        long currentTimeMillis = System.currentTimeMillis();
-        Date date = new Date(currentTimeMillis);
-        SimpleDateFormat sdf = new SimpleDateFormat("yyyyMMddHHmmss");
-        return sdf.format(date);
+        return LocalDateTime.now().format(DATE_TIME_FORMATTER);
     }
 
     public static void sendEmail(String host, int port, final String userName, final String password, String toAddress, String subject, String message) {
@@ -199,7 +188,7 @@ public class MyJob implements Job {
             Transport.send(msg);
             logger.info("备份失败通知邮件发送成功");
         } catch (MessagingException e) {
-            e.printStackTrace();
+            logger.error("发送通知邮件失败", e);
         }
     }
 }
